# ThaleC

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  Makefile.am  README.md  annotated.html  annotated_dup.js  classes.html  config_8in_8h.html  config_8in_8h.js  config_8in_8h_source.html  configure.ac  dir_000001_000000.html  dir_8ee1a5e78eaec319fe5d64075812fc61.html  dir_8ee1a5e78eaec319fe5d64075812fc61.js  dir_8ee1a5e78eaec319fe5d64075812fc61_dep.map  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.js  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b_dep.map  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b_dep.md5  error_8c.html  error_8c.js  error_8c__incl.map  error_8c__incl.md5  error_8c_ac18b3eeb8b7759aed988843a51bdb6e8_cgraph.map  error_8c_ac18b3eeb8b7759aed988843a51bdb6e8_cgraph.md5  error_8c_ac18b3eeb8b7759aed988843a51bdb6e8_icgraph.map  error_8c_ac18b3eeb8b7759aed988843a51bdb6e8_icgraph.md5  error_8c_add153ce9523438942a9050da6cf5e158_icgraph.map  error_8c_add153ce9523438942a9050da6cf5e158_icgraph.md5  error_8h.html  error_8h.js  error_8h__dep__incl.map  error_8h__dep__incl.md5  error_8h__incl.map  error_8h__incl.md5  error_8h_ac18b3eeb8b7759aed988843a51bdb6e8_cgraph.map  error_8h_ac18b3eeb8b7759aed988843a51bdb6e8_cgraph.md5  (+111 more)
.github/: pull_request_template.md
.github/workflows/: ci.yml  doxygen.yml
docs/man/: thale.1
examples/: Hello.thl
search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_2.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  enumvalues_a.js  enumvalues_b.js  enumvalues_c.js  enumvalues_d.js  enumvalues_e.js  enumvalues_f.js  files_0.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  (+17 more)
source/: Makefile.am  help.c  thale.c
source/include/: config.in.h  help.h
src/: Makefile.am  error.c  lex.c  thale.c
src/include/: error.h  lex.h
tests/: Makefile.am  lex_tests.c
tests/include/: lex_tests.h
